fix(style): remove negative margin which caused tab to be clipped

--- a/packages/fabric8-ui/src/app/profile/overview/overview.component.less
+++ b/packages/fabric8-ui/src/app/profile/overview/overview.component.less
@@ -107,7 +107,6 @@
 
 .profile-overview-nav {
   padding: 4px 0 0;
-  margin-left: -48px;
   background-color: @color-pf-black-150;
   border-bottom: 1px solid @color-pf-black-300;
   .nav-tabs {
